// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: IconPicker ui no results 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <Button
      color="primary"
      id="icon-picker-popover"
      tag="button"
    >
      Select your best friend
    </Button>
  </div>
  Some error
  <UncontrolledPopover
    isOpen={false}
    placement="bottom"
    target="icon-picker-popover"
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      &lt;SearchInput value="asdlfjalsdjflajsdlf" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <div
        style={
          Object {
            "height": 250,
            "width": 250,
          }
        }
      >
        <ContentState
          mode="no-results"
          subTitle="No icons were found, please try again with a different query."
          title="No icons found"
        />
      </div>
      <div
        className="my-2 text-center"
      >
        <Pager
          onChange={[Function]}
          page={
            Object {
              "content": Array [],
              "first": true,
              "last": true,
              "number": 1,
              "numberOfElements": 0,
              "size": 0,
              "totalElements": 0,
              "totalPages": 1,
            }
          }
        />
      </div>
    </PopoverBody>
  </UncontrolledPopover>
</div>
`;

exports[`Component: IconPicker ui with selected value 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <span
      className="mr-1"
    >
      <Icon
        className="pt-2"
        icon="3d_rotation"
        id="icon-picker-value"
      />
      <div
        className="icon-picker-clear"
        onClick={[Function]}
        role="button"
      >
        Clear
      </div>
    </span>
    <Button
      color="primary"
      id="icon-picker-popover"
      tag="button"
    >
      Select your best friend
    </Button>
  </div>
  Some error
  <UncontrolledPopover
    isOpen={false}
    placement="bottom"
    target="icon-picker-popover"
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      &lt;SearchInput value="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <div
        style={
          Object {
            "height": 250,
            "width": 250,
          }
        }
      >
        <span
          className="d-inline-block"
          key="3d_rotation"
        >
          <Icon
            className="m-2"
            icon="3d_rotation"
            id="icon-0"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-0"
          >
            3d_rotation
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessibility"
        >
          <Icon
            className="m-2"
            icon="accessibility"
            id="icon-1"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-1"
          >
            accessibility
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessibility_new"
        >
          <Icon
            className="m-2"
            icon="accessibility_new"
            id="icon-2"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-2"
          >
            accessibility_new
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessible"
        >
          <Icon
            className="m-2"
            icon="accessible"
            id="icon-3"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-3"
          >
            accessible
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessible_forward"
        >
          <Icon
            className="m-2"
            icon="accessible_forward"
            id="icon-4"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-4"
          >
            accessible_forward
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_balance"
        >
          <Icon
            className="m-2"
            icon="account_balance"
            id="icon-5"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-5"
          >
            account_balance
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_balance_wallet"
        >
          <Icon
            className="m-2"
            icon="account_balance_wallet"
            id="icon-6"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-6"
          >
            account_balance_wallet
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_box"
        >
          <Icon
            className="m-2"
            icon="account_box"
            id="icon-7"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-7"
          >
            account_box
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_circle"
        >
          <Icon
            className="m-2"
            icon="account_circle"
            id="icon-8"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-8"
          >
            account_circle
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="add_shopping_cart"
        >
          <Icon
            className="m-2"
            icon="add_shopping_cart"
            id="icon-9"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-9"
          >
            add_shopping_cart
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm"
        >
          <Icon
            className="m-2"
            icon="alarm"
            id="icon-10"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-10"
          >
            alarm
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm_add"
        >
          <Icon
            className="m-2"
            icon="alarm_add"
            id="icon-11"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-11"
          >
            alarm_add
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm_off"
        >
          <Icon
            className="m-2"
            icon="alarm_off"
            id="icon-12"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-12"
          >
            alarm_off
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm_on"
        >
          <Icon
            className="m-2"
            icon="alarm_on"
            id="icon-13"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-13"
          >
            alarm_on
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="all_inbox"
        >
          <Icon
            className="m-2"
            icon="all_inbox"
            id="icon-14"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-14"
          >
            all_inbox
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="all_out"
        >
          <Icon
            className="m-2"
            icon="all_out"
            id="icon-15"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-15"
          >
            all_out
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="android"
        >
          <Icon
            className="m-2"
            icon="android"
            id="icon-16"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-16"
          >
            android
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="announcement"
        >
          <Icon
            className="m-2"
            icon="announcement"
            id="icon-17"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-17"
          >
            announcement
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="arrow_right_alt"
        >
          <Icon
            className="m-2"
            icon="arrow_right_alt"
            id="icon-18"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-18"
          >
            arrow_right_alt
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="aspect_ratio"
        >
          <Icon
            className="m-2"
            icon="aspect_ratio"
            id="icon-19"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-19"
          >
            aspect_ratio
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assessment"
        >
          <Icon
            className="m-2"
            icon="assessment"
            id="icon-20"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-20"
          >
            assessment
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment"
        >
          <Icon
            className="m-2"
            icon="assignment"
            id="icon-21"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-21"
          >
            assignment
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_ind"
        >
          <Icon
            className="m-2"
            icon="assignment_ind"
            id="icon-22"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-22"
          >
            assignment_ind
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_late"
        >
          <Icon
            className="m-2"
            icon="assignment_late"
            id="icon-23"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-23"
          >
            assignment_late
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_return"
        >
          <Icon
            className="m-2"
            icon="assignment_return"
            id="icon-24"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-24"
          >
            assignment_return
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_returned"
        >
          <Icon
            className="m-2"
            icon="assignment_returned"
            id="icon-25"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-25"
          >
            assignment_returned
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_turned_in"
        >
          <Icon
            className="m-2"
            icon="assignment_turned_in"
            id="icon-26"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-26"
          >
            assignment_turned_in
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="autorenew"
        >
          <Icon
            className="m-2"
            icon="autorenew"
            id="icon-27"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-27"
          >
            autorenew
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="backup"
        >
          <Icon
            className="m-2"
            icon="backup"
            id="icon-28"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-28"
          >
            backup
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="book"
        >
          <Icon
            className="m-2"
            icon="book"
            id="icon-29"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-29"
          >
            book
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bookmark"
        >
          <Icon
            className="m-2"
            icon="bookmark"
            id="icon-30"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-30"
          >
            bookmark
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bookmark_border"
        >
          <Icon
            className="m-2"
            icon="bookmark_border"
            id="icon-31"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-31"
          >
            bookmark_border
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bookmarks"
        >
          <Icon
            className="m-2"
            icon="bookmarks"
            id="icon-32"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-32"
          >
            bookmarks
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bug_report"
        >
          <Icon
            className="m-2"
            icon="bug_report"
            id="icon-33"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-33"
          >
            bug_report
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="build"
        >
          <Icon
            className="m-2"
            icon="build"
            id="icon-34"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-34"
          >
            build
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="cached"
        >
          <Icon
            className="m-2"
            icon="cached"
            id="icon-35"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-35"
          >
            cached
          </UncontrolledTooltip>
        </span>
      </div>
      <div
        className="my-2 text-center"
      >
        <Pager
          onChange={[Function]}
          page={
            Object {
              "content": Array [
                "3d_rotation",
                "accessibility",
                "accessibility_new",
                "accessible",
                "accessible_forward",
                "account_balance",
                "account_balance_wallet",
                "account_box",
                "account_circle",
                "add_shopping_cart",
                "alarm",
                "alarm_add",
                "alarm_off",
                "alarm_on",
                "all_inbox",
                "all_out",
                "android",
                "announcement",
                "arrow_right_alt",
                "aspect_ratio",
                "assessment",
                "assignment",
                "assignment_ind",
                "assignment_late",
                "assignment_return",
                "assignment_returned",
                "assignment_turned_in",
                "autorenew",
                "backup",
                "book",
                "bookmark",
                "bookmark_border",
                "bookmarks",
                "bug_report",
                "build",
                "cached",
              ],
              "first": true,
              "last": false,
              "number": 1,
              "numberOfElements": 36,
              "size": 36,
              "totalElements": 1010,
              "totalPages": 29,
            }
          }
        />
      </div>
    </PopoverBody>
  </UncontrolledPopover>
</div>
`;

exports[`Component: IconPicker ui without selected value 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <Button
      color="primary"
      id="icon-picker-popover"
      tag="button"
    >
      Select your best friend
    </Button>
  </div>
  Some error
  <UncontrolledPopover
    isOpen={false}
    placement="bottom"
    target="icon-picker-popover"
    toggle={[Function]}
    trigger="legacy"
  >
    <PopoverHeader
      tag="h3"
    >
      &lt;SearchInput value="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
    </PopoverHeader>
    <PopoverBody
      tag="div"
    >
      <div
        style={
          Object {
            "height": 250,
            "width": 250,
          }
        }
      >
        <span
          className="d-inline-block"
          key="3d_rotation"
        >
          <Icon
            className="m-2"
            icon="3d_rotation"
            id="icon-0"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-0"
          >
            3d_rotation
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessibility"
        >
          <Icon
            className="m-2"
            icon="accessibility"
            id="icon-1"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-1"
          >
            accessibility
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessibility_new"
        >
          <Icon
            className="m-2"
            icon="accessibility_new"
            id="icon-2"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-2"
          >
            accessibility_new
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessible"
        >
          <Icon
            className="m-2"
            icon="accessible"
            id="icon-3"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-3"
          >
            accessible
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="accessible_forward"
        >
          <Icon
            className="m-2"
            icon="accessible_forward"
            id="icon-4"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-4"
          >
            accessible_forward
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_balance"
        >
          <Icon
            className="m-2"
            icon="account_balance"
            id="icon-5"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-5"
          >
            account_balance
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_balance_wallet"
        >
          <Icon
            className="m-2"
            icon="account_balance_wallet"
            id="icon-6"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-6"
          >
            account_balance_wallet
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_box"
        >
          <Icon
            className="m-2"
            icon="account_box"
            id="icon-7"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-7"
          >
            account_box
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="account_circle"
        >
          <Icon
            className="m-2"
            icon="account_circle"
            id="icon-8"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-8"
          >
            account_circle
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="add_shopping_cart"
        >
          <Icon
            className="m-2"
            icon="add_shopping_cart"
            id="icon-9"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-9"
          >
            add_shopping_cart
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm"
        >
          <Icon
            className="m-2"
            icon="alarm"
            id="icon-10"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-10"
          >
            alarm
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm_add"
        >
          <Icon
            className="m-2"
            icon="alarm_add"
            id="icon-11"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-11"
          >
            alarm_add
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm_off"
        >
          <Icon
            className="m-2"
            icon="alarm_off"
            id="icon-12"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-12"
          >
            alarm_off
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="alarm_on"
        >
          <Icon
            className="m-2"
            icon="alarm_on"
            id="icon-13"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-13"
          >
            alarm_on
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="all_inbox"
        >
          <Icon
            className="m-2"
            icon="all_inbox"
            id="icon-14"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-14"
          >
            all_inbox
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="all_out"
        >
          <Icon
            className="m-2"
            icon="all_out"
            id="icon-15"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-15"
          >
            all_out
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="android"
        >
          <Icon
            className="m-2"
            icon="android"
            id="icon-16"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-16"
          >
            android
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="announcement"
        >
          <Icon
            className="m-2"
            icon="announcement"
            id="icon-17"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-17"
          >
            announcement
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="arrow_right_alt"
        >
          <Icon
            className="m-2"
            icon="arrow_right_alt"
            id="icon-18"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-18"
          >
            arrow_right_alt
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="aspect_ratio"
        >
          <Icon
            className="m-2"
            icon="aspect_ratio"
            id="icon-19"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-19"
          >
            aspect_ratio
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assessment"
        >
          <Icon
            className="m-2"
            icon="assessment"
            id="icon-20"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-20"
          >
            assessment
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment"
        >
          <Icon
            className="m-2"
            icon="assignment"
            id="icon-21"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-21"
          >
            assignment
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_ind"
        >
          <Icon
            className="m-2"
            icon="assignment_ind"
            id="icon-22"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-22"
          >
            assignment_ind
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_late"
        >
          <Icon
            className="m-2"
            icon="assignment_late"
            id="icon-23"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-23"
          >
            assignment_late
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_return"
        >
          <Icon
            className="m-2"
            icon="assignment_return"
            id="icon-24"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-24"
          >
            assignment_return
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_returned"
        >
          <Icon
            className="m-2"
            icon="assignment_returned"
            id="icon-25"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-25"
          >
            assignment_returned
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="assignment_turned_in"
        >
          <Icon
            className="m-2"
            icon="assignment_turned_in"
            id="icon-26"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-26"
          >
            assignment_turned_in
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="autorenew"
        >
          <Icon
            className="m-2"
            icon="autorenew"
            id="icon-27"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-27"
          >
            autorenew
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="backup"
        >
          <Icon
            className="m-2"
            icon="backup"
            id="icon-28"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-28"
          >
            backup
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="book"
        >
          <Icon
            className="m-2"
            icon="book"
            id="icon-29"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-29"
          >
            book
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bookmark"
        >
          <Icon
            className="m-2"
            icon="bookmark"
            id="icon-30"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-30"
          >
            bookmark
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bookmark_border"
        >
          <Icon
            className="m-2"
            icon="bookmark_border"
            id="icon-31"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-31"
          >
            bookmark_border
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bookmarks"
        >
          <Icon
            className="m-2"
            icon="bookmarks"
            id="icon-32"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-32"
          >
            bookmarks
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="bug_report"
        >
          <Icon
            className="m-2"
            icon="bug_report"
            id="icon-33"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-33"
          >
            bug_report
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="build"
        >
          <Icon
            className="m-2"
            icon="build"
            id="icon-34"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-34"
          >
            build
          </UncontrolledTooltip>
        </span>
        <span
          className="d-inline-block"
          key="cached"
        >
          <Icon
            className="m-2"
            icon="cached"
            id="icon-35"
            onClick={[Function]}
          />
          <UncontrolledTooltip
            placement="top"
            target="icon-35"
          >
            cached
          </UncontrolledTooltip>
        </span>
      </div>
      <div
        className="my-2 text-center"
      >
        <Pager
          onChange={[Function]}
          page={
            Object {
              "content": Array [
                "3d_rotation",
                "accessibility",
                "accessibility_new",
                "accessible",
                "accessible_forward",
                "account_balance",
                "account_balance_wallet",
                "account_box",
                "account_circle",
                "add_shopping_cart",
                "alarm",
                "alarm_add",
                "alarm_off",
                "alarm_on",
                "all_inbox",
                "all_out",
                "android",
                "announcement",
                "arrow_right_alt",
                "aspect_ratio",
                "assessment",
                "assignment",
                "assignment_ind",
                "assignment_late",
                "assignment_return",
                "assignment_returned",
                "assignment_turned_in",
                "autorenew",
                "backup",
                "book",
                "bookmark",
                "bookmark_border",
                "bookmarks",
                "bug_report",
                "build",
                "cached",
              ],
              "first": true,
              "last": false,
              "number": 1,
              "numberOfElements": 36,
              "size": 36,
              "totalElements": 1010,
              "totalPages": 29,
            }
          }
        />
      </div>
    </PopoverBody>
  </UncontrolledPopover>
</div>
`;
